<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/activity_horizontal_double_margin">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/auth_screen_logo_width"
        android:layout_height="@dimen/auth_screen_logo_height"
        android:src="@drawable/auth_logo"
        android:layout_marginTop="@dimen/auth_screen_top_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/auth_screen_input_widget_height"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:padding="@dimen/activity_horizontal_quart_margin"
        android:paddingStart="@dimen/activity_horizontal_half_margin"
        android:paddingEnd="@dimen/activity_horizontal_half_margin"
        android:background="@drawable/background_bordered_line_square"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        android:textSize="@dimen/paragraph"
        android:hint="@string/auth_screen_input_txt_hint_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edt_password"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/auth_screen_input_widget_height"
        android:padding="@dimen/activity_horizontal_quart_margin"
        android:paddingStart="@dimen/activity_horizontal_half_margin"
        android:paddingEnd="@dimen/activity_horizontal_half_margin"
        android:layout_marginBottom="@dimen/activity_vertical_double_margin"
        android:background="@drawable/background_bordered_line_square"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:textSize="@dimen/paragraph"
        android:hint="@string/auth_screen_input_txt_hint_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/auth_sign_in"/>

    <Button
        android:id="@+id/auth_sign_in"
        android:layout_width="match_parent"
        android:layout_height="@dimen/auth_screen_input_widget_height"
        android:layout_marginBottom="@dimen/auth_screen_bottom_margin"
        android:text="@string/auth_screen_button_txt_sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/paragraph"
        android:background="@drawable/background_filled_auth_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>